2014-12-13  Titus Brown  <titus@idyll.org>

    * sandbox/{calc-error-profile.py,collect-variants.py,correct-errors.py,
    trim-low-abund.py}: Support for k-mer spectral error analysis, sublinear
    error profile calculations from shotgun data sets, adaptive variant
    collection based on graphalign, streaming error correction, and streaming
    error trimming.
    * tests/test_sandbox_scripts.py: added tests for sandbox/trim-low-abund.py.

2014-12-08  Michael R. Crusoe  <mcrusoe@msu.edu>

    * doc/user/known_issues.txt: Document that multithreading leads to dropped
    reads.

2014-12-07  Michael R. Crusoe  <mcrusoe@msu.edu>

    This is khmer v1.2

    * Makefile: add sandbox scripts to the pylint_report.txt target
    * doc/dev/coding-guidelines-and-review.txt: Add question about command
    line API to the checklist
    * doc/dev/release.txt: refresh release procedure
    * doc/release-notes/release-1.2.md

2014-12-05  Michael R. Crusoe  <mcrusoe@msu.edu>

    * CITATIONS,khmer/khmer_args.py: update citations for Qingpeng's paper

2014-12-01  Michael R. Crusoe  <mcrusoe@msu.edu>

    * doc/roadmap.txt: Explain the roadmap to v2 through v4

2014-12-01  Kevin Murray  <spam@kdmurray.id.au>

    * tests/test_scripts.py: Stop a test from making a temporary output file
    in the current dir by explictly specifying an output file.

2014-12-01  Kevin Murray  <spam@kdmurray.id.au>

    * load-into-counting.py: Add a CLI parameter to output a machine-readable
    summary of the run, including number of k-mers, FPR, input files etc in
    json or TSV format.

2014-12-01  Titus Brown  <t@idyll.org>

    * Update sandbox docs: some scripts now used in recipes

2014-11-23  Phillip Garland  <pgarland@gmail.com>

    * lib/khmer.hh (khmer): define KSIZE_MAX
    * khmer/_khmermodule.cc (forward_hash, forward_hash_no_rc) (reverse_hash):
    Use KSIZE_MAX to check whether the user-supplied k is larger than khmer
    supports.

2014-11-19  Michael R. Crusoe  <mcrusoe@msu.edu>